deployPolicy/manual-bluegreen/blue.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  namespace: default
spec:
  selector:
    app: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
