deployPolicy/manual-bluegreen/blue.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "bluegreen.starmooc.net"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: blue-service
                port:
                  number: 80
